; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_svgawin.c_main.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_svgawin.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = call i32 (...) @get_username_and_hostname()
  %7 = load i32, i32* %4, align 4
  %8 = load i8**, i8*** %5, align 8
  %9 = call i32 @parse_parameters(i32 %7, i8** %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

12:                                               ; preds = %2
  %13 = call i32 (...) @ui_init()
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %24

16:                                               ; preds = %12
  %17 = call i32 (...) @ui_create_window()
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %16
  store i32 1, i32* %3, align 4
  br label %24

20:                                               ; preds = %16
  %21 = call i32 (...) @ui_main_loop()
  %22 = call i32 (...) @ui_destroy_window()
  %23 = call i32 (...) @ui_deinit()
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %20, %19, %15, %11
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @get_username_and_hostname(...) #1

declare dso_local i32 @parse_parameters(i32, i8**) #1

declare dso_local i32 @ui_init(...) #1

declare dso_local i32 @ui_create_window(...) #1

declare dso_local i32 @ui_main_loop(...) #1

declare dso_local i32 @ui_destroy_window(...) #1

declare dso_local i32 @ui_deinit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
